# goesdatabuilder

./: .gitignore  LICENSE  README  README.md  pyproject.toml  requirements.txt
configs/data/: goesmulticloudnc.yaml
configs/pipelines/: goesmulticloud.yaml
configs/store/: goesmulticloudzarr.yaml
docs/: GOESMultiCloud.md
goes2zarr/data/: GOES.py  goesmulticloud.py
goesdatabuilder/: __init__.py
goesdatabuilder-docs/configs/: configuration-files.md
goesdatabuilder-docs/data/: goesmulticloud.md
goesdatabuilder-docs/data/goes/: goesmetadatacatalog.md  goesmulticloud.md  multicloud.md  multicloudcatalog.md  multicloudconstants.md  multicloudmetadatacatalog.md
goesdatabuilder-docs/pipelines/: goesmulticloudpipeline.md
goesdatabuilder-docs/regrid/: geostationary.md  geostationaryregridder.md
goesdatabuilder-docs/store/: zarrstore.md
goesdatabuilder-docs/store/datasets/: goes.md  goesmulticloudzarr.md
goesdatabuilder-docs/utils/: goes_composites.md  grid_utils.md  plotting.md
goesdatabuilder/configs/data/: goesmulticloudnc.yaml
goesdatabuilder/configs/pipelines/: goesmulticlould.yaml
goesdatabuilder/configs/store/: goesmulticloudzarr.yaml
goesdatabuilder/configurations/: basic.yaml
goesdatabuilder/configurations/data/: goesmulticloudnc.yaml
goesdatabuilder/configurations/store/: goesmulticloudzarr.yaml
goesdatabuilder/data/: __init__.py  goesmulticloud.py
goesdatabuilder/data/goes/: __init__.py  multicloud.py  multicloudcatalog.py  multicloudconstants.py
goesdatabuilder/pipelines/: __init__.py  goesmulticloudpipeline.py
goesdatabuilder/regrid/: __init__.py  geostationary.py
goesdatabuilder/store/: __init__.py  zarrstore.py
goesdatabuilder/store/datasets/: __init__.py  goes.py  goesmulticloudzarr.py
goesdatabuilder/utils/: __init__.py  goes_composites.py  grid_utils.py  plotting.py
notebooks/: goes19_catalog.csv  io_inventory.ipynb
notebooks/data/: test-GOESMultiCloud.ipynb
src/goes2zarr/satellite/: goes.py
